--- a/ccatcracker/requirements.txt
+++ b/ccatcracker/requirements.txt
@@ -1,18 +1,80 @@
-pillow==5.2.0
-psycopg2==2.7.5
+absl-py==0.9.0
+astor==0.8.1
+astroid==2.2.5
+attrs==19.1.0
+backcall==0.1.0
+bleach==3.1.0
+certifi==2019.6.16
+chardet==3.0.4
+colorama==0.4.1
+decorator==4.4.0
+defusedxml==0.6.0
 Django==2.2.1
 django-widget-tweaks==1.4.5
+docutils==0.15.2
+entrypoints==0.3
+fancyimpute==0.5.4
+gast==0.3.3
+grpcio==1.26.0
+h5py==2.10.0
+ibm-cos-sdk==2.6.0
+ibm-cos-sdk-core==2.6.0
+ibm-cos-sdk-s3transfer==2.6.0
+idna==2.8
+ipython==7.8.0
+ipython-genutils==0.2.0
 isort==4.3.21
+jedi==0.15.1
+Jinja2==2.10.1
+jmespath==0.9.4
+jsonschema==3.0.2
+jupyter-core==4.5.0
+Keras==2.2.4
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
 lazy-object-proxy==1.4.1
+Markdown==3.1.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
+mistune==0.8.4
+mock==3.0.5
 mysqlclient==1.4.2.post1
+nbconvert==5.6.0
+nbformat==4.4.0
+numpy==1.18.2
+opencv-python==4.1.2.30
+pandocfilters==1.4.2
+parso==0.5.1
+pickleshare==0.7.5
+Pillow==5.2.0
+prompt-toolkit==2.0.9
+protobuf==3.11.2
+psycopg2==2.7.5
 pycryptodome==3.8.2
+Pygments==2.4.2
 pylint==2.3.1
 pylint-django==2.0.10
 pylint-plugin-utils==0.5
+pyrsistent==0.15.4
+python-dateutil==2.8.1
 pytz==2019.1
+PyYAML==5.3
+reportlab==3.5.23
+requests==2.22.0
+scipy==1.4.1
 six==1.12.0
 sqlparse==0.3.0
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+testpath==0.4.2
+tqdm==4.41.1
+traitlets==4.3.2
 typed-ast==1.4.0
+urllib3==1.25.8
+wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.16.0
 wincertstore==0.2
 wrapt==1.11.2
